tests/neg/i14039.check
-- Error: tests/neg/i14039.scala:4:14 ----------------------------------------------------------------------------------
4 |def test = get() // error
  |           ^^^^^
  |           my error
